Fixing bug in /api/v1/users
